--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,15 +5,16 @@
   {% seo %}
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
-  
-  <script src="http://d3js.org/d3.v3.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="/DataTables/css/jquery.datatables.min.css"/>
+ 
+  <script type="text/javascript" src="/DataTables/js/jquery.datatables.min.js"></script>
   
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700">
 
+  
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon-16x16.png" | relative_url }}">
