--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,9 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="/DataTables/css/jquery.datatables.min.css"/>
+  <link rel="stylesheet" type="text/css" href="/assets/DataTables/css/jquery.datatables.min.css"/>
  
-  <script type="text/javascript" src="/DataTables/js/jquery.datatables.min.js"></script>
+  <script type="text/javascript" src="/assets/DataTables/js/jquery.datatables.min.js"></script>
   
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
