--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,8 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="/assets/css/jquery.datatables.min.css"/>
- 
-  <script type="text/javascript" src="/assets/js/jquery.datatables.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/jquery.datatables.min.css" | relative_url }}"/>
+  <script type="text/javascript" src="{{ "/assets/js/jquery.datatables.min.js" | relative_url }}"></script>
   
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
