--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,9 @@
       <h2 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul>
+      <li><a href="{{ '/' | prepend: site.absolute_url }}">About</a></li>
       <li><a href="{{ '/schedule' | prepend: site.absolute_url }}">Schedule</a></li>
+      <li><a href="{{ '/videos' | prepend: site.absolute_url }}">This Semester</a></li>
       <li><a href="{{ '/archive' | prepend: site.absolute_url }}">Archive</a></li>
       <li><a href="{{ '/contact' | prepend: site.absolute_url }}">Contact</a></li>
     </ul>
