works but needs to be prettier

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,10 @@
 
   <link rel="stylesheet" type="text/css" href="{{ "/assets/css/jquery.dataTables.min.css" | relative_url }}"/>
   <script type="text/javascript" src="{{ "/assets/js/jquery.dataTables.min.js" | relative_url }}"></script>
+
+  
+  <link rel="stylesheet" type="text/css" href="{{ "/assets/css/bootstrap-table.min.css" | relative_url }}"/>
+  <script type="text/javascript" src="{{ "/assets/js/bootstrap-table.min.js" | relative_url }}"></script>
   
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
