works but needs to be more user friendly and also needs more data

--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -1,1 +1,1 @@
-<iframe width="768" height="432" src="{{ include.yturl  | replace: ".com/", ".com/embed/"  }}" frameborder="0" allowfullscreen></iframe>
+<iframe width="768" height="432" src="{{ include.yturl  | replace: ".com/watch?v=", ".com/embed/"  }}" frameborder="0" allowfullscreen></iframe>
