clarify this semester v/s schedule

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,8 @@ layout: default
   <p>Videos of this semester's talks will appear here.</p>
 {% endif %}
 
+See [schedule](/schedule) for upcoming talks.
+
 {% for post in site.posts %}
   <article>
     <h2>
