lol this isnt markdown

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
   <p>Videos of this semester's talks will appear here.</p>
 {% endif %}
 
-See [schedule](/schedule) for upcoming talks.
+See <a href="{{ '/schedule' | prepend: site.absolute_url }}">schedule</a> for upcoming talks.
 
 {% for post in site.posts %}
   <article>
