--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,8 +5,7 @@
     </a>
     <ul>
       <li><a href="{{ '/' | prepend: site.absolute_url }}">About</a></li>
-      <li><a href="{{ '/schedule' | prepend: site.absolute_url }}">Schedule</a></li>
-      <li><a href="{{ '/videos' | prepend: site.absolute_url }}">This Semester</a></li>
+      <li><a href="{{ '/schedule' | prepend: site.absolute_url }}">This Semester</a></li>
       <li><a href="{{ '/archive' | prepend: site.absolute_url }}">Archive</a></li>
       <li><a href="{{ '/contact' | prepend: site.absolute_url }}">Contact</a></li>
     </ul>
